@@ -1,3 +1,8 @@
+2009-02-04  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed
+	  "Bug 469910 - Incorrect type resolution on attributes".
+
 2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.SourceEditor/IdeViMode.cs: Remove unnecessary
